# Runetika

./: .gitignore  .mcp.json  AUTOMATION_README.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Cargo_optimized.toml  DEBUG_ANALYSIS_REPORT_20250822_151034.md  ENHANCED_SYSTEM_SUMMARY.md  GAME_CONTROLS.md  INDIE_GAME_RESEARCH.md  LEAN_PRACTICAL_ANALYSIS.md  LEAN_SCTT_VISION.md  MAZE_TUTORIAL.md  Main.lean  README.md  RESEARCH_AND_NEXT_STEPS.md  RUNETIKA_VISION.md  Runetika.lean  SECURITY_AUDIT.md  SILICON_MIND_DIALOGUE.md  STORY_CONCEPTS.md  STORY_SUGGESTIONS.md  SUCCESS_STRATEGY.md  TERMINAL_GUIDE.md  WARP.md  WASM_IMPLEMENTATION.md  WASM_STRATEGY.md  build_safe.sh  lake-manifest.json  lakefile.lean  lakefile.toml  launch.sh  quick_fix.sh  renovate.json  run_game.sh  run_test.sh  rust-toolchain.toml  test_room.sh  (+1 more)
.cargo/: config.toml
.claude/agents/: codebase-simplifier.md  storyteller-weaver.md
.githooks/: pre-commit
.github/workflows/: post-commit.yml  update-deps.yml
Runetika/: Cargo.toml  SmoothCubicalTT.lean
Runetika/SmoothCubicalTT/: Categorical.lean  Core.lean  Distributed.lean  Economics.lean  HigherInductive.lean  Quantum.lean  SelfCertifying.lean
docs/: API_INDEX.md  DEBUG_MODE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  MECHANICS_VOTE_RESULTS.md  PROJECT_STRUCTURE.md  VARIANT_COMPARISON.md
examples/: compression_test.rs  input_test.rs  maze_game.rs  room_fixed.rs  room_with_maze.rs  simple_move.rs  simple_room.rs  test_room.rs  working_room.rs
lean/Runetika/: GameTypes.lean  Puzzles.lean
mdFiles/: API_INDEX.md  COMMIT_SUMMARY_20250822_151218.md  DEBUG_ANALYSIS_REPORT_20250822_151034.md  DEVELOPMENT_GUIDE.md  MCP_RECOMMENDATIONS.md  RESEARCH_AND_NEXT_STEPS.md  SECURITY_SUMMARY.md
shaders/: orb_glow.wgsl
src/: compression_test.rs  consciousness_fragments.rs  creative_mechanics.rs  debug_overlay.rs  game_state.rs  glyph_resonance.rs  lean_bridge.rs  lib.rs  main.rs  main_documented.rs  main_mvp.rs  main_room.rs  maze.rs  mvp_terminal.rs  orb_material.rs  pattern_echo.rs  pattern_echo_mvp.rs  perspective.rs  player.rs  puzzle.rs  silicon_mind.rs  silicon_mind_mvp.rs  spaceship.rs  spaceship_2d.rs  temporal_layers.rs  terminal_commands.rs  terminal_interface.rs  type_inspector.rs  type_theory_viz.rs  type_theory_viz_debug.rs
src/arc_engine/: mod.rs  pattern.rs  puzzles.rs  types.rs  validator.rs
src/credits/: mod.rs  systems.rs  ui.rs
src/menu/: components.rs  mod.rs  systems.rs  ui.rs  ui_old.rs
src/performance/: mod.rs
src/settings/: components.rs  mod.rs  persistence.rs  systems.rs  ui.rs
src/terminal/: commands.rs  components.rs  mod.rs  starfield.rs  systems.rs  ui.rs
tests/: debug_tests.rs
tools/: build_docs.sh  build_web_docs.sh  debug_analysis.sh  setup_automation.sh  update-deps.sh
wasm_modules/: empathy.wat
