[package]
name = "runetika"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy with essential features for our creative mechanics
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "default_font",
    "png",
    "x11",  # Linux
    "wayland",  # Linux  
    "bevy_color",
    "bevy_gizmos",  # For visualization
    "bevy_pbr",     # For 3D rendering
    "bevy_core_pipeline",
] }

# 2D Physics
avian2d = { version = "0.1", default-features = false, features = ["2d", "f32", "parry-f32", "default-collider"] }

# Essential dependencies
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# FAST DEV BUILDS - Prioritize compilation speed
[profile.dev]
opt-level = 1           # Minimal optimization for playable framerates
debug = 0               # No debug info for faster builds
lto = false            # No link time optimization
incremental = true     # Incremental compilation
codegen-units = 256    # Max parallelism

[profile.dev.package."*"]
opt-level = 3          # Optimize dependencies
debug = 0

# Fast iteration profile
[profile.fast]
inherits = "dev"
opt-level = 0
debug = false
strip = "symbols"
lto = false
codegen-units = 256

# Release profile
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"