[package]
name = "runetika"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runetika"
path = "src/main.rs"

[[bin]]
name = "mvp"
path = "src/main_mvp.rs"

[dependencies]
# Bevy with MINIMAL features for fast compilation
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "default_font",
    "png",
    "x11",  # Linux
    "wayland",  # Linux  
    "bevy_color",
    # NO audio, NO pbr, NO gltf, NO animations, NO debug tools
] }

# 2D Physics
avian2d = { version = "0.3", default-features = false, features = ["2d", "f32", "parry-f32", "default-collider"] }

# Essential dependencies only
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# Removed wasmer and wat - not needed for basic gameplay

# FAST DEV BUILDS - Prioritize compilation speed
[profile.dev]
opt-level = 0           # No optimization
debug = 0               # No debug info
lto = false            # No link time optimization
incremental = true     # Incremental compilation
codegen-units = 256    # Max parallelism

[profile.dev.package."*"]
opt-level = 0          # Don't optimize deps either for fastest builds
debug = 0

# Fast iteration profile
[profile.fast]
inherits = "dev"
opt-level = 0
debug = false
strip = "symbols"
lto = false
codegen-units = 256

# Release profile
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"